syntax = "proto3";

message DBRoleData {
	uint64   AccountID = 1;
	uint64   RoleID = 2;
	uint32   ActorID = 3;
	int32    Level = 4;
	uint64   Exp = 5;
	string   Name = 6;
	uint32   LangID = 7;
	uint32   VipLvl = 8;
	uint32   VipExp = 9;
}

message DBBagData {

}

message DBCopyData {

}

message DBRoleLoginAck {
    	uint32   RetCode = 1;
	uint64   RoleID = 2;
	DBRoleData RoleData = 3;
	DBBagData BagData = 4;
	DBCopyData CopyData = 5;
}
